# colchis

./: Cargo.toml  LICENSE-MIT  README.md
examples/: compressed_storage_example.rs  heap_size.rs  json_explorer.rs  serialize.rs
src/: builder.rs  info.rs  lib.rs  lookup.rs  node_info_vec.rs  parser.rs  structure.rs  text_usage.rs  tree_builder.rs  value_usage.rs
src/document/: array.rs  core.rs  mod.rs  nav.rs  object.rs  serialize.rs  value.rs
src/text/: compressed_storage.rs  mod.rs
src/usage/: bitpacking_builder.rs  elias_fano_index.rs  mod.rs  roaring_builder.rs  traits.rs
