[package]
name = "colchis"
version = "0.1.0"
edition = "2024"
authors = ["Martijn Faassen <faassen@startifact.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["succinct", "json"]

[dependencies]
ahash = "0.8.12"
bitpacking = "0.9.2"
flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
roaring = "0.10.12"
struson = "0.6.0"
vers-vecs = "1.6.3"
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
